# agents

./: .gitignore  README.md  utilidades_conversiones.py
contenidos-didacticos/: 01-MULTI-AGENTES-COORDINACION.md  02-MEMORIA-CONTEXTO.md  03-EVALUACION-TESTING.md  04-MCP-PROTOCOLO-COMPLETO.md  INDICE-GENERAL.md  README.md
docs/: RAG.adoc  REVEAL_CUSTOMIZATION_GUIDE.md  bases_datos_vectoriales_grafos.adoc  evaluacion-testing.adoc  langchain.adoc  langflow.adoc  mcp.adoc  memoria-contexto.adoc  multi-agentes-coordinacion.adoc  n8n.adoc  opencode.adoc  unsloth.adoc
docs/html/: RAG.html  autogen.html  bases_datos_vectoriales_grafos.html  crewai.html  evaluacion-testing.html  langchain.html  langflow.html  mcp.html  memoria-contexto.html  multi-agentes-coordinacion.html  n8n.html  opencode.html
docs/reveal/: RAG.html  autogen.html  bases_datos_vectoriales_grafos.html  crewai.html  evaluacion-testing.html  gradio.html  langchain.html  langflow.html  llama_factory.html  mcp.html  memoria-contexto.html  n8n.html  unsloth.html  (+1 more)
ejemplos/: ollama_utils.py
ejercicios/crewai/: .env.example  CREWAI_EXERCISES.md  EXECUTION_SUMMARY.md  README.md  crew_tools.py  pyproject.toml  requirements.txt  specs.md  tools.py
ejercicios/crewai/apod/: apod.py
ejercicios/crewai/apod/data/: apod_data.json  apod_metadata.csv
ejercicios/crewai/chatbot/: chatbot.py
ejercicios/crewai/restcountries/: restcountries.py
ejercicios/crewai/restcountries/data/: countries.csv  countries_raw.json
ejercicios/crewai/titanic/: titanic.py
ejercicios/crewai/titanic/data/: titanic_cleaned.csv
(+264 files in other folders)
